Added database connection and entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 application.google.api=API_KEY
+
+# jdbc.X
+jdbc.driverClassName=org.postgresql.Driver
+jdbc.url=jdbc:postgresql://localhost:5432/places
+jdbc.user=pavel
+jdbc.pass=12386
+
+# hibernate.X
+hibernate.dialect=org.hibernate.dialect.PostgreSQL82Dialect
+hibernate.hbm2ddl.auto=validate
+hibernate.cache.use_second_level_cache=false
+hibernate.show_sql=true
